# filozofowie

./: CMakeLists.txt  README.md
Headers/: ConsoleViewer.h  ConstValues.h  Enums.h  Fork.h  Philosopher.h  Table.h  Viewer.h
src/: ConsoleViewer.cpp  Philosopher.cpp  Table.cpp  Viewer.cpp  main.cpp
